--- a/src/Pet_Output.ipynb
+++ b/src/Pet_Output.ipynb
@@ -2,26 +2,146 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7fe3a278",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "365"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "using Dates\n",
+    "\n",
+    "Date = Dates.Date(2013,12,31)\n",
+    "\n",
+    " Dates.dayofyear(Date)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "72a7003e",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4f0c2e78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0629355049617244"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\t\tDayOfYear = 1\n",
+    "\t\tHour = 8\n",
+    "\t\tb = 2* π * (DayOfYear - 81) /364\n",
+    "\n",
+    "\t\tSc = 0.1645 * sin(2*b) - 0.1255 * cos(b) - 0.025 * sin(b)\n",
+    "\n",
+    "\t\tωₛ_SOLAR_TIME_ANGLE(Hour, Sc) = ((Hour + Sc ) -12.0) * π / 12.0\n",
+    "\n",
+    "\t\tW1 = ωₛ_SOLAR_TIME_ANGLE(Hour, Sc)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7d4e0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SolPos(azimuth=126.4113940402111°, elevation=-1.5812997085223703°, zenith=91.58129970852237°)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using SolarPosition\n",
+    "\n",
+    "obs = SolarPosition.Observer(51.5, -0.09, 100.0)\n",
+    "times = (DateTime(2023, 1, 1, 8))\n",
+    "\n",
+    "positions = solar_position(obs, times)\n",
+    "\n",
+    "# 36.26338495\n",
+    "770448 * pi / 180\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1bde248c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: `@dms_str` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.\nin expression starting at d:\\JOE\\MAIN\\MODELS\\PET\\src\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W4sZmlsZQ==.jl:1",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: `@dms_str` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "in expression starting at d:\\JOE\\MAIN\\MODELS\\PET\\src\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W4sZmlsZQ==.jl:1\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] eval(m::Module, e::Any)\n",
+      "   @ Core .\\boot.jl:489\n",
+      " [2] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "   @ Base .\\loading.jl:2870\n",
+      " [3] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "   @ VSCodeServer c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:24\n",
+      " [4] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "   @ VSCodeServer c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\packages\\VSCodeServer\\src\\repl.jl:303\n",
+      " [5] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
+      "   @ VSCodeServer c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:13\n",
+      " [6] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
+      "   @ VSCodeServer.JSONRPC c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\packages\\JSONRPC\\src\\typed.jl:68\n",
+      " [7] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#20#21\"{String})\n",
+      "   @ VSCodeServer c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:147\n",
+      " [8] top-level scope\n",
+      "   @ c:\\Users\\jpollacco.local\\.vscode\\extensions\\julialang.language-julia-1.176.2\\scripts\\notebook\\notebook.jl:28"
+     ]
+    }
+   ],
+   "source": [
+    "dms\"1°2′3″\"deg \n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.12.4",
+   "language": "julia",
+   "name": "julia-1.12"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.12.4"
   }
  },
  "nbformat": 4,
