--- a/src/Pet_Output.ipynb
+++ b/src/Pet_Output.ipynb
@@ -367,22 +367,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8f4efade",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "207.68431983385256"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[1, 2, 3]\n"
+     ]
     }
    ],
    "source": [
-    "1 / 0.004815\n"
+    "\t\t\t∑T_New = []\n",
+    "\t\t\t\t∑T_New = append!(∑T_New, 1)\n",
+    "\t\t\t\t\t\t∑T_New = append!(∑T_New, 2)\n",
+    "\t\t\t\t\t\t∑T_New = append!(∑T_New, 3)\n",
+    "\n",
+    "println(∑T_New)\n"
    ]
   }
  ],
