--- a/src/MetÉireann.ipynb
+++ b/src/MetÉireann.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "296dd796",
    "metadata": {},
    "outputs": [],
@@ -329,6 +329,27 @@
     "Header = [\"Date\", \"SolarRadiation[W/m²]\"]\n",
     "\n",
     "CSV.write(Path_Output, Tables.table([DayHour_Reduced SolarRadiation_Reduced]), writeheader=true, header=Header, bom=true)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a28fc169",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2013-07-01"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Date_Start=(2013,7,1,1)\n",
+    "\n"
    ]
   }
  ],
